# openkit

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md  package.json
.cursor/agents/: bug-fixer.mdc  feature-implementer.mdc  refactoring-assistant.mdc  test-writer.mdc
.cursor/rules/: component-system.mdc  css-styling.mdc  proc-macros.mdc  rendering.mdc  testing.mdc  widget-development.mdc
benches/: css_parsing.rs  layout.rs  rendering.rs  text.rs  widget_tree.rs
examples/: angular_style.rs  hello_world.rs  softbuffer_test.rs  theme_toggle.rs  widget_showcase.rs
examples/styles/: openkit-design.css  tailwind.css
openkit-macros/: Cargo.toml
openkit-macros/src/: component.rs  lib.rs  styleable.rs  widget.rs
src/: app.rs  component.rs  geometry.rs  lib.rs  macros.rs
src/css/: mod.rs  parser.rs  properties.rs  selector.rs  stylesheet.rs  value.rs
src/layout/: mod.rs
src/platform/: freebsd.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/render/: mod.rs  painter.rs  text.rs
src/render/gpu/: batch.rs  effects.rs  mod.rs  pipeline.rs  shaders.rs  texture_atlas.rs
src/theme/: tokens.rs
src/widget/: action_center.rs  address_bar.rs  app_grid.rs  avatar.rs  battery_indicator.rs  bookmark_bar.rs  browser_tab.rs  browser_toolbar.rs  button.rs  calendar.rs  card.rs  chat_window.rs  checkbox.rs  clock.rs  connection_card.rs  container.rs  context_menu.rs  data_table.rs  desktop.rs  download_item.rs  dropdown.rs  find_bar.rs  glass_pane.rs  icon_button.rs  label.rs  list_view.rs  menu_bar.rs  mod.rs  navigation_bar.rs  network_indicator.rs  notification.rs  panel.rs  password_field.rs  piece_map.rs  scroll_view.rs  search_bar.rs  server_list.rs  slider.rs  spacer.rs  speed_graph.rs  (+13 more)
styles/: input.css
