[package]
name = "openkit-macros"
version = "0.1.1"
edition = "2024"
description = "Procedural macros for the OpenKit UI framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pegasusheavy/openkit"
homepage = "https://github.com/pegasusheavy/openkit"
documentation = "https://docs.rs/openkit-macros"
authors = ["Pegasus Heavy Industries"]
keywords = ["gui", "ui", "macros", "proc-macro"]
categories = ["gui", "development-tools::procedural-macro-helpers"]
rust-version = "1.85"

[lib]
proc-macro = true

[dependencies]
# Parsing and quoting
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits", "parsing"] }

# For better error messages
proc-macro-error = "1"

# For parsing attributes
darling = "0.20"
